@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745, STR #942, STR #931)
+	- The fltk-config script now handles invocation via a
+	  symlink (STR #869)
 	- Updated WIN32 cut/paste code to consistently handle DOS
 	  text (STR #961)
 	- Added shared library support for Cygwin and MingW (STR
